feat: change color scheme

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,10 +1,10 @@
 @import 'mixins';
 
 :root {
-	--main-bg: #1a1a1a;
-	--primary: #0016e0;
-	--main-text: #adb2b1;
-	--bold-text: #fff;
+	--main-bg: #F9F9F9;
+	--primary: #9F29FC;
+	--main-text: #323232;
+	--bold-text: #222;
 	--white: #fff;
 }
 
