--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -1,59 +1,68 @@
 .container {
+	@include flex(start, space-between, 29px);
 	padding-top: 138px;
 	background: url('../../assets/blur.svg') no-repeat;
 	background-position-x: center;
-	background-position-y: top;
+	background-position-y: -30px;
 	background-size: contain;
-	margin-bottom: 200px;
+	padding-bottom: 200px;
+
 
 	@include media($mobile-bp) {
+		background-position-y: center;
+		align-items: center;
+		flex-direction: column;
 		padding-top: 40px;
-		margin-bottom: 100px;
-		background-position-y: bottom;
+		padding-bottom: 100px;
 	}
 }
 
 .info {
-	@include flex(center, center, 29px);
+	@include flex(start, center, 50px);
+	flex-direction: column;
+	text-align: left;
+	width: 50%;
+	padding-top: 120px;
 
 	@include media($mobile-bp) {
-		flex-direction: column;
-		align-items: baseline;
+		align-items: center;
+		gap: 20px;
+		width: 100%;
+		padding-top: 0;
+		text-align: center;
 	}
 
 	&Title {
+		max-width: 564px;
 		font-size: 50px;
 		font-weight: 700;
 		text-transform: uppercase;
 		color: var(--bold-text);
-		text-align: right;
 
 		@include media($mobile-bp) {
 			font-size: 32px;
-			text-align: left;
 		}
 	}
 
 	&Desc {
-		max-width: 342px;
+		max-width: 433px;
+		font-size: 14px;
 	}
 }
 
 .poster {
-	width: 100%;
-	max-height: 550px;
 	border-radius: 70px;
 	overflow: hidden;
-	margin-top: 130px;
+	width: 50%;
 
 	@include media($mobile-bp) {
-		margin-top: 65px;
 		border-radius: 40px;
+		width: 80%;
 	}
 
 	img {
 		display: block;
-		width: 100%;
 		height: auto;
+		width: 100%;
 	}
 }
