--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -1,5 +1,5 @@
 .container {
-	@include flex(start, space-between, 29px);
+	@include flex(center, space-between, 29px);
 	padding-top: 138px;
 	background: url('../../assets/blur.svg') no-repeat;
 	background-position-x: center;
@@ -7,6 +7,9 @@
 	background-size: contain;
 	padding-bottom: 200px;
 
+	@include media($laptop-bp) {
+		background-position-y: 25px;
+	}
 
 	@include media($mobile-bp) {
 		background-position-y: center;
@@ -22,13 +25,11 @@
 	flex-direction: column;
 	text-align: left;
 	width: 50%;
-	padding-top: 120px;
 
 	@include media($mobile-bp) {
 		align-items: center;
 		gap: 20px;
 		width: 100%;
-		padding-top: 0;
 		text-align: center;
 	}
 
@@ -53,16 +54,16 @@
 .poster {
 	border-radius: 70px;
 	overflow: hidden;
-	width: 50%;
 
 	@include media($mobile-bp) {
 		border-radius: 40px;
-		width: 80%;
+		width: auto;
 	}
 
 	img {
 		display: block;
 		height: auto;
 		width: 100%;
+		max-height: 400px;
 	}
 }
