--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -1,18 +1,9 @@
 .container {
 	@include flex(center, space-between, 29px);
-	padding-top: 138px;
-	background: url('../../assets/blur.svg') no-repeat;
-	background-position-x: center;
-	background-position-y: -30px;
-	background-size: contain;
-	padding-bottom: 200px;
+	padding-block: 138px 200px;
 
-	@include media($laptop-bp) {
-		background-position-y: 25px;
-	}
 
 	@include media($mobile-bp) {
-		background-position-y: center;
 		align-items: center;
 		flex-direction: column;
 		padding-top: 40px;
@@ -54,6 +45,29 @@
 .poster {
 	border-radius: 70px;
 	overflow: hidden;
+	z-index: 1;
+
+	@include pseudo(before, false) {
+		background: url('../../assets/blur.svg') no-repeat;
+		background-size: 50%;
+		background-position-x: 400px;
+		background-position-y: 100px;
+		content: '';
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+		z-index: -1;
+
+		@include media($laptop-bp) {
+			background-position-x: 250px;
+		}
+
+		@include media($mobile-bp) {
+			background-position: 0 70px;
+			background-size: 100%;
+		}
+	}
 
 	@include media($mobile-bp) {
 		border-radius: 40px;
