--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -78,6 +78,9 @@
 		display: block;
 		height: auto;
 		width: 100%;
-		max-height: 400px;
+
+		@include media($mobile-bp) {
+			max-height: 400px;
+		}
 	}
 }
