fix: intro-component background blur position fixed

--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -66,8 +66,8 @@
 		}
 
 		@include media($mobile-bp) {
-			background-position: 0 70px;
-			background-size: 100%;
+			background-position: center 90px;
+			background-size: 80%;
 		}
 	}
 
