fix: intro-component poster picture positioning

--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -71,9 +71,14 @@
 		}
 	}
 
+	@include media($laptop-bp) {
+		max-width: 50%;
+	}
+
 	@include media($mobile-bp) {
 		border-radius: 40px;
 		width: auto;
+		max-width: unset;
 	}
 
 	img {
