--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -1,8 +1,7 @@
 .container {
 	@include flex(center, space-between, 29px);
 	padding-block: 200px 200px;
-
-
+	
 	@include media($mobile-bp) {
 		align-items: center;
 		flex-direction: column;
@@ -12,7 +11,7 @@
 }
 
 .info {
-	@include flex(start, center, 50px);
+	@include flex(flex-start, center, 50px);
 	flex-direction: column;
 	text-align: left;
 	width: 50%;
@@ -77,7 +76,6 @@
 
 	@include media($mobile-bp) {
 		border-radius: 40px;
-		width: auto;
 		max-width: unset;
 	}
 
