--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -1,6 +1,6 @@
 .container {
 	@include flex(center, space-between, 29px);
-	padding-block: 200px 200px;
+	padding-block: 160px 200px;
 
 	@include media($mobile-bp) {
 		align-items: center;
@@ -45,38 +45,28 @@
 
 .poster {
 	border-radius: 70px;
-	overflow: hidden;
 	z-index: 1;
 
-	@include pseudo(before, false) {
+	@include pseudo(before, true) {
 		background: url('../../assets/blur.svg') no-repeat;
-		background-size: 50%;
-		background-position-x: 400px;
-		background-position-y: 200px;
-		content: '';
-		width: 100%;
-		height: 100%;
-		left: 0;
-		top: 0;
+		width: 1136px;
+		height: 1114px;
+		right: calc(100% - 1136px / 2);
+		top: -260px;
 		z-index: -1;
 
-		@include media($laptop-bp) {
-			background-position-x: 250px;
-		}
-
 		@include media($mobile-bp) {
-			background-position: center 90px;
-			background-size: 80%;
+			right: calc(50% - 1600px / 2);
+			background-size: 60%;
 		}
 	}
 
-	@include media($laptop-bp) {
+	@include media($mobile-bp, min) {
 		max-width: 50%;
 	}
 
 	@include media($mobile-bp) {
 		border-radius: 40px;
-		max-width: unset;
 	}
 
 	img {
