--- a/src/modules/home/components/Intro/Intro.module.scss
+++ b/src/modules/home/components/Intro/Intro.module.scss
@@ -1,6 +1,6 @@
 .container {
 	@include flex(center, space-between, 29px);
-	padding-block: 160px 200px;
+	padding-block: 100px 150px;
 
 	@include media($mobile-bp) {
 		align-items: center;
@@ -44,7 +44,7 @@
 .poster {
 	z-index: 1;
 
-	@include pseudo(before, true) {
+	@include pseudo(before) {
 		background: url('../../assets/blur.svg') no-repeat;
 		width: 1136px;
 		height: 1114px;
@@ -53,15 +53,17 @@
 		z-index: -1;
 
 		@include media($mobile-bp) {
-			right: calc(50% - 1600px / 2);
-			background-size: 60%;
+			width: 100%;
+			height: 100%;
+			right: 0;
+			top: -200px;
+			background-size: contain;
 		}
 	}
 
 	@include media($mobile-bp, min) {
 		max-width: 50%;
 	}
-
 
 	img {
 		display: block;
