fix: pretify code style

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,8 +1,8 @@
 @import 'mixins';
 
 :root {
-	--main-bg: #F9F9F9;
-	--primary: #9F29FC;
+	--main-bg: #f9f9f9;
+	--primary: #9f29fc;
 	--main-text: #323232;
 	--bold-text: #222;
 	--white: #fff;
